# rust-arbitrage-bot

./: Cargo.toml  config.json
agregator/: Cargo.toml
agregator/src/: lib.rs
flash-loan/: Cargo.toml
src/: main.rs
src/bot/: mod.rs  platform.rs  token.rs
src/bot/platform/: kyber.rs  mod.rs  uniswap.rs
src/lib/: mod.rs
src/lib/bot/: mod.rs
src/lib/platform/: kyber.rs  mod.rs
triangular/: Cargo.toml
