[package]
name = "rust-arbitrage-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bot"
path = "src/bot/mod.rs"

[dependencies]
hex = "0.4"
web3 = "0.17.0"
tokio = { version = "1.22.0", features = ["full"] }
dotenv = "0.15.0"
serde = "1.0.148"
serde_json = "1.0.89"
futures = "0.3.25"
ctrlc = "3.2.3"
