[package]
name = "flash-loan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
web3 = "0.18.0"
dotenv = "0.15.0"
serde = "1.0.148"
serde_json = "1.0.89"
ctrlc = "3.2.3"
